# TestCMake

./: .gitignore  CMakeLists.txt  README.md
cmake/common/: versionconfig.cmake
libobs/: CMakeLists.txt
